fix(gin-swagger): Correct routes
