# backend/cmd/docs/swagger.json
@@ -4,7 +4,69 @@
         "contact": {}
     },
     "paths": {
-        "/event-handler": {
+        "/": {
+            "get": {
+                "description": "Renders the form.html page to display user information form.",
+                "produces": [
+                    "text/html"
+                ],
+                "summary": "Render form page",
+                "responses": {
+                    "200": {
+                        "description": "HTML content of the form page",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/callback": {
+            "get": {
+                "description": "Exchange code for token and save it",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Handle OAuth2 callback",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "State token",
+                        "name": "state",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization code",
+                        "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "303": {
+                        "description": "Redirects to /"
+                    },
+                    "400": {
+                        "description": "State token doesn't match",
+                        "schema": {
+                            "$ref": "#/definitions/http.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to retrieve or save token",
+                        "schema": {
+                            "$ref": "#/definitions/http.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/event": {
             "post": {
                 "description": "Handles event creation, guest addition, email sending, and redirects to Google Meet link.",
                 "consumes": [
@@ -47,75 +109,13 @@
                     "400": {
                         "description": "No Google Meet link available or other errors",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/form": {
-            "get": {
-                "description": "Renders the form.html page to display user information form.",
-                "produces": [
-                    "text/html"
-                ],
-                "summary": "Render form page",
-                "responses": {
-                    "200": {
-                        "description": "HTML content of the form page",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/oauth/callback": {
-            "get": {
-                "description": "Exchange code for token and save it",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Handle OAuth2 callback",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "State token",
-                        "name": "state",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization code",
-                        "name": "code",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "303": {
-                        "description": "Redirects to /"
-                    },
-                    "400": {
-                        "description": "State token doesn't match",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Unable to retrieve or save token",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
+                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     }
                 }
@@ -123,7 +123,7 @@
         }
     },
     "definitions": {
-        "handlers.ErrorResponse": {
+        "http.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
